service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-demo-service
spec:
  selector:
    app: ci-cd-demo
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
  type: ClusterIP
